# agent-monitoring

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yaml  monitoring-entrypoint.sh  pyproject.toml
.agent/: COMMIT_MESSAGE.txt
.github/workflows/: ci.yml  codeql.yml  release.yml
infra/docker/: monitoring-entrypoint.sh
infra/docs/: log_analysis_history_comparison.md  vps_monitoring_context.example.md
infra/scripts/: README.md  utils.sh
infra/scripts/db_backup/: backup_db.sh  restore_db.sh
infra/scripts/release/: build.sh  deploy.sh  release.sh
migrations/models/: 001_initial_schema.py  002_add_log_analysis_llm_calls.py  003_add_log_analysis_comparison_fields.py  004_add_email_deliveries.py
src/: agents.py  assets_loader.py  conf.py  decorators.py  exceptions.py  llm.py  logging_config.py  main.py  mcp.py  protocols.py  reports_cli.py  repositories.py  retry_policy.py  schemas.py  scripts.py  services.py  settings.py
src/cli/: __init__.py  db.py  shell.py  typer.py  utils.py
src/db/: __init__.py  cli.py  config.py  lifecycle.py  managers.py  models.py
src/devtools/: README.md  __init__.py  data_seed.py  manual_log_analysis.py  mcp.py
src/devtools/fixtures/log_analysis_mcp/backend_5xx/: group_errors.json  group_errors_host_security.json  group_errors_vps_security.json  incident_bundle.json  inspect_proxy_activity.json
src/devtools/fixtures/log_analysis_mcp/common/: collect_logs_base.json  list_projects.json  workflow_bootstrap.json
src/devtools/fixtures/log_analysis_mcp/sensitive_path_success/: grep_snapshot_env_200.json  group_errors.json  group_errors_host_security.json  group_errors_vps_security.json  incident_bundle.json  inspect_proxy_activity.json
src/prompt_assets/: log_analysis_compare_history_prompt.json  log_analysis_critical_decision_rules.md  log_analysis_decision_skill.md  log_analysis_followup_instructions.md  log_analysis_instructions.md  log_analysis_no_compare_history_prompt.json  log_analysis_report_contract.md
src/scripts/: __init__.py  run.py  shell.py
src/services/: cleanup.py  email.py  log_analyse.py  log_fingerprints.py  log_history_comparison.py  sitemap.py
src/templates/monitoring/: failure.html  log_analysis.html  sitemap_analysis.html
src/tests/: conftest.py  factories.py  log_analysis_mcp_fixtures.py  test_agents.py  test_cleanup.py  test_cli.py  test_db_config.py  test_devtools_data_seed.py  test_email.py  test_exceptions.py  test_llm.py  test_llm_usage.py  test_log_analysis_mcp_fixtures.py  test_log_fingerprints.py  test_log_history_comparison.py  test_logging_config.py  test_manual_log_analysis.py  test_mcp.py  test_models.py  test_monitoring_context.py  test_package_scripts.py  test_repositories.py  test_retry_policy.py  test_services.py  test_settings.py  test_shell.py  test_sitemap.py
src/tests/fixtures/log_analysis_mcp/backend_5xx/: group_errors.json
src/tests/fixtures/log_analysis_mcp/common/: collect_logs_base.json  workflow_bootstrap.json
src/tests/fixtures/log_analysis_mcp/sensitive_path_success/: incident_bundle.json
src/utils/: __init__.py  byte_size.py  grouped_errors.py  llm_usage.py  log_artifacts.py  log_reports.py  monitoring_context.py  runtime.py
