[project]
name = "agent-monitoring"
version = "0.1.0"
description = "Standalone background monitoring app for log and sitemap analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.4",
    "tortoise-orm>=0.25.1",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "factory-boy>=3.3.3",
    "isort>=5.13.0",
    "mypy>=1.13.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "safety>=3.6.1",
]

[project.scripts]
log_analysis = "scripts:log_analysis_entry"
sitemap-analysis = "scripts:sitemap_analysis_entry"
check-mcp = "scripts:check_mcp_entry"
makemigrations = "db.cli:makemigrations"
migrate = "db.cli:migrate"
test = "db.cli:test"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "src/conf.py",
    "src/db",
    "src/decorators.py",
    "src/logging_config.py",
    "src/main.py",
    "src/scripts.py",
    "src/settings.py",
]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]
force-exclude = '''
^/migrations/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "migrations"]

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["db.managers", "db.models"]
disable_error_code = ["return-value"]

[tool.ruff]
exclude = ["migrations"]
force-exclude = true
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.aerich]
tortoise_orm = "db.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./src"
