[project]
name = "agent-monitoring"
version = "0.1.0"
description = "Standalone background monitoring app for log and sitemap analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.31.0",
    "django-environ>=0.13.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "ipython>=9.0.0",
    "jinja2>=3.1.6",
    "llm-core[openai]",
    "pydantic>=2.13.4",
    "tortoise-orm>=0.25.4",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "factory-boy>=3.3.3",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.14",
    "safety>=3.8.0",
]

[project.scripts]
typer = "cli.typer:main"
shell = "cli.shell:main"
makemigrations = "cli.db:makemigrations"
migrate = "cli.db:migrate"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "src/conf.py",
    "src/agents.py",
    "src/db",
    "src/devtools",
    "src/decorators.py",
    "src/llm.py",
    "src/logging_config.py",
    "src/main.py",
    "src/mcp.py",
    "src/repositories.py",
    "src/schemas.py",
    "src/cli",
    "src/services",
    "src/settings.py",
    "src/templates",
    "src/utils",
]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]
force-exclude = '''
^/migrations/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "migrations"]

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["db.managers", "db.models"]
disable_error_code = ["return-value"]

[tool.ruff]
exclude = ["migrations"]
force-exclude = true
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.aerich]
tortoise_orm = "db.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./src"

[tool.uv.sources]
llm-core = { git = "https://github.com/LukaszRemkowicz/llm-core.git", rev = "main" }
